# io-mouse-box

./: .buildinfo  LICENSE  README.md  entry_exit_mouse_box.html  entry_exit_mouse_box.mask_from_video.html  entry_exit_mouse_box.measures.html  entry_exit_mouse_box.media_manager.html  entry_exit_mouse_box.results_table.html  entry_exit_mouse_box.utils.html  entry_exit_mouse_box.video_mean_processor.html  genindex.html  good_practices.html  index.html  modules.html  mouse_in_box.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  tox.ini  user_guide.html
.github/workflows/: make_doc.yml
_modules/: index.html
_modules/entry_exit_mouse_box/: _reader.html  _widget.html  mask_from_video.html  measures.html  media_manager.html  results_table.html  utils.html  video_mean_processor.html
_sources/: entry_exit_mouse_box.mask_from_video.rst.txt  entry_exit_mouse_box.measures.rst.txt  entry_exit_mouse_box.media_manager.rst.txt  entry_exit_mouse_box.results_table.rst.txt  entry_exit_mouse_box.rst.txt  entry_exit_mouse_box.utils.rst.txt  entry_exit_mouse_box.video_mean_processor.rst.txt  good_practices.rst.txt  index.rst.txt
docs/: conf.py  custom.css  good_practices.rst  modules.rst  mouse_in_box.rst  user_guide.rst
src/entry_exit_mouse_box/: __init__.py  _widget.py  mask_from_video.py  measures.py  media_manager.py  napari.yaml  results_table.py  utils.py  video_mean_processor.py
src/entry_exit_mouse_box/_tests/: test_reader.py  test_widget.py
