[metadata]
name = entry-exit-mouse-box
version = attr: entry_exit_mouse_box.__version__
description = A Napari plugin allowing to segment and analyze the position of mice running in boxes.
long_description = file: README.md
long_description_content_type = text/markdown

author = Clément H. Benedetti
author_email = clement.benedetti@mri.cnrs.fr
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing


[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    scikit-image
    shapely
    napari[all]
    opencv-python-headless
python_requires = >=3.9

include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    entry-exit-mouse-box = entry_exit_mouse_box:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
